--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-hola!
+hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et corrupti nobis asperiores dolores incidunt neque fuga, accusantium ab vitae nam tenetur, debitis aliquid dolorum tempore ipsam recusandae, soluta iure necessitatibus?
