--- a/src/BlogPost.scss
+++ b/src/BlogPost.scss
@@ -1,11 +1,19 @@
 .blog-post {
 
+  &:nth-child(odd) {
+    border-bottom: 2px solid black;
+  }
+
   p {
     margin: 10px 0;
   }
 
   p:first-child {
     margin-top: 0;
+  }
+
+  ol {
+    padding: 0 25px;
   }
 
   li {
@@ -18,5 +26,14 @@
 
   img {
     width: 75%;
+  }
+
+  blockquote {
+    padding: 0 20px;
+    border-left: 2px solid grey;
+
+    p {
+      color: grey;
+    }
   }
 }
